new program page
new program page and bunch of small changes

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
             </div>
       
           </div>
-          <h2 style="text-align:center; font-size: 36px;">Yer - Tarih</h2>
-                <p style="text-align:center;font-size: 24px;">
+          <h2 style="text-align:center; font-size: 36px; margin-top:72px; margin-bottom:32px;">Yer - Tarih</h2>
+                <p style="text-align:center;font-size: 24px; line-height: 24px;">
 
                     11 & 14 Kasım Workshop : Online<br><br>
                     12 & 13 Kasım Zirve : Boğaziçi Üniversitesi
@@ -252,10 +252,10 @@
       </section>
    
     <section id="gallery">
-        <div class="container-wide">
-            <h2>Geçtiğimiz Seneden Fotoğraflar</h2>
+        <div class="container-wide" >
+            <h2 >Geçtiğimiz Seneden Fotoğraflar</h2>
         </div>
-        <div class="container "> <!--KOPYALAMANIN BAŞI, BURADAN SONRASI GİDECEK. Discord'a toplantıda attığım link ile yapılacak. Bundan farklı görünürse, sıkıntı olursa yazın.-->
+        <div class="container"> <!--KOPYALAMANIN BAŞI, BURADAN SONRASI GİDECEK. Discord'a toplantıda attığım link ile yapılacak. Bundan farklı görünürse, sıkıntı olursa yazın.-->
             <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
             <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
                 data-link="https://photos.app.goo.gl/2cgwv5BPUncTXkYt7" data-title="Datacamp"
@@ -307,7 +307,7 @@
     </section>
     <section id="contact">
         <div class="container container-wide">
-            <h2>Bize Ulaşın</h3>
+            <h2 style="margin-top:64px;margin-bottom:28px;">Bize Ulaşın</h2>
             <!--
             <div class="d-flex justify-content-center">
                     <a class="btn" style="background-color:#25D366; color: white;" href="https://wa.me/905012075169?text=Merhaba%20Enes">WhatsApp'tan Ulaşın!</a>
@@ -385,7 +385,7 @@
     </section>
     <section>
         <div style="text-align:center;">
-            <h2>Mail listemize abone olun</h2>
+            <h2 style="margin-top:32px;">Mail listemize abone olun</h2>
             <form style="padding:3px;" action="https://tinyletter.com/bouncompec" method="post" target="popupwindow"
                 onsubmit="window.open('https://tinyletter.com/bouncompec', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
                 <p>
@@ -398,7 +398,7 @@
         </div>
     </section>
     <footer>
-        <div class="footer-container container">
+        <div class="footer-container container" style="margin-top:48px;">
             <a target="_blank" href="https://compec.org">
                 <img style="width: 30%" src="assets/compec1white.png" alt="Boğaziçi University IT Club">
             </a>
