--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -207,18 +207,17 @@
         </div>
     </section>
    
-    <section style="background-image:none; color:#0a0462;">
+    <footer style="background-image:none; font-weight: 400; color:#6D6B7E; padding: 64px 0 ;">
         <div class="footer-container container">
-            
-            <a target="_blank" href="https://compec.org">
-                <img style="width: 30%" src="../assets/compec-blue.png" alt="Boğaziçi University IT Club">
-            </a>
-            <p>
-                <b>© 2022 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır®
-                <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </b>
-            </p>
+          <a target="_blank" href="https://compec.org">
+            <img style="margin-bottom: 24px; height: 128px; width: auto;" src="../assets/compec-blue.png" alt="Boğaziçi University IT Club">
+          </a>
+          <p>
+            <p style="font-size: 14px
+          ; line-height: 20px">© 2022 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
+          </p>
         </div>
-    </section>
+      </footer>
   </div>
 
         
