--- a/sss/index.html
+++ b/sss/index.html
@@ -122,7 +122,7 @@
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          Toplam 4 gün sürecek olan etkinliğin ilk ve son günü online, 2. ve 3. günleri yüz yüze gerçekleşecektir. Yüz yüze katılım bileti alan katılımcılarımız etkinliğin zirve günlerine Albert Long Hall'de katılabileceklerdir. 
+                          Boğaziçi Datacamp Veri Bilimi Zirvesi yüz yüze katılımcılarını 12 ve 13 Kasım tarihlerinde Boğaziçi Üniversitesi Güney Kampüs’te Albert Long Hall (saatli bina) binasında ağırlayacaktır. Etkinliğimizin workshop’ları 11 ve 14 Kasım tarihlerinde online olarak gerçekleşecektir. 
                         </div>
                       </div>
                     </div>
@@ -173,7 +173,7 @@
                       </h2>
                       <div id="collapseFive" class="accordion-collapse collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          Online olarak katılacaklar sertifikayla alakalı herhangi bir sorun yaşamayacaktır. 
+                          Evet, Boğaziçi Datacamp'e online olarak katılım sağlamak sertifika almaya engel değildir.
                         </div>
                       </div>
                     </div>
@@ -189,10 +189,10 @@
                         </div>
                       </div>
                     </div>
-                    <!--<div class="accordion-item">
+                    <div class="accordion-item">
                       <h2 class="accordion-header" id="headingSeven">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
-                          5 Aralık’tan sonra düzenlenecek olan webinarlara nasıl katılabilirim?
+                         14 Kasım'dan sonra düzenlenecek olan webinarlara nasıl katılabilirim?
                         </button>
                       </h2>
                       <div id="collapseSeven" class="accordion-collapse collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
@@ -200,7 +200,7 @@
                           Boğaziçi DataCamp katılımcıları sene boyunca düzenli olarak düzenlenecek olan webinarlara ücretsiz katılabilirler. Bu süreçteki iletişim mail yoluyla yapılacaktır. 
                         </div>
                       </div>
-                    </div> -->
+                    </div
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingEight">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
@@ -209,11 +209,11 @@
                       </h2>
                       <div id="collapseEight" class="accordion-collapse collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          Katılımcılar etkinlikten önce gönderilecek olan kayıt sistemi ile workshoplara kaydolabileceklerdir.
+                          Boğaziçi Datacamp’te workshoplara etkinlik öncesinde göndereceğimiz kayıt sistemi üzerinden kaydolabilirsiniz. Kayıt işlemi sonrasında workshop linkleri tarafınıza iletilecektir.
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
+                    <!--<div class="accordion-item">
                       <h2 class="accordion-header" id="headingNine">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
                           Bilet alınca workshoplara da katılabilir miyim?
@@ -221,13 +221,13 @@
                       </h2>
                       <div id="collapseNine" class="accordion-collapse collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            Workshoplar için kotamız olacaktır, etkinlikten önceki hafta
+                            Etkinlikten önceki hafta
                             tüm bilet alanlara workshoplar için başvuru formu
                             gönderilecektir, bu formdaki bilgilerinize göre uygun
                             workshoplara katılabileceksiniz.
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 
                 <br/>
@@ -238,18 +238,17 @@
             </div>
         </section>
 
-        <section style="background-image:none; color:#0a0462;">
-            <div class="footer-container container">
-                
-                <a target="_blank" href="https://compec.org">
-                    <img style="width: 30%" src="../assets/compec-blue.png" alt="Boğaziçi University IT Club">
-                </a>
-                <p>
-                    <b>© 2022 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır®
-                    <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </b>
-                </p>
-            </div>
-        </section>
+        <footer style="background-image:none; font-weight: 400; color:#6D6B7E; padding: 64px 0 ;">
+          <div class="footer-container container">
+            <a target="_blank" href="https://compec.org">
+              <img style="margin-bottom: 24px; height: 128px; width: auto;" src="../assets/compec-blue.png" alt="Boğaziçi University IT Club">
+            </a>
+            <p>
+              <p style="font-size: 14px
+            ; line-height: 20px">© 2022 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
+            </p>
+          </div>
+        </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
