false classname fix

--- a/program/index.html
+++ b/program/index.html
@@ -110,7 +110,7 @@
     <section style="padding-top: 100px; flex: 1; background-image: none;"></section>
     <main class="program-page" style="background-image: none;">
       <section class="section section-program-head">
-        <div class="program-container">
+        <div class="program-containerrr">
           <div class="program-head-wrapper">
             <div class="program-head-heading">
               <p class="program-label">BOĞAZİÇİ DATACAMP ‘22</p>
@@ -123,7 +123,7 @@
         </div>
       </section>
       <section class="section section-program-plan" style="display:none;">
-        <div class="program-container" >
+        <div class="program-containerrr" >
           <div class="day-card">
             <div class="day-card-head">
               <p class="program-label program-label-sec program-label-yellow">Workshop</p>
@@ -362,7 +362,7 @@
       </div>
 
       <section class="section section-program-plan">
-        <div class="program-container">
+        <div class="program-containerrr">
           <div class="day-card">
             <div class="day-card-head">
               <p class="program-label program-label-sec program-label-purple">Zirve</p>
@@ -601,7 +601,7 @@
       </div>
 
       <section class="section section-program-plan">
-        <div class="program-container">
+        <div class="program-containerrr">
           <div class="day-card">
             <div class="day-card-head">
               <p class="program-label program-label-sec program-label-purple">Zirve</p>
@@ -839,7 +839,7 @@
         </svg>
       </div>
       <section class="section section-program-plan" style="display: none;">
-        <div class="program-container">
+        <div class="program-containerrr">
           <div class="day-card">
             <div class="day-card-head">
               <p class="program-label program-label-sec program-label-yellow">Workshop</p>
