2 öğrenci kulübü eklendi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -173,6 +173,16 @@
                         <img src="../assets/partners/2022/kulupler/uskudar-tk.jpeg" width="40%" alt="Üsküdar Üniversitesi Teknoloji Kulübü">
                         </a>
                     </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.instagram.com/ieee.comu/">
+                        <img src="../assets/partners/2022/kulupler/comuieee.png" width="80%" alt="IEEE ÇOMÜ Öğrenci Kolu">
+                        </a>
+                    </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://linktr.ee/beykozuniyazilim">
+                        <img src="../assets/partners/2022/kulupler/beykozyazilim.png" width="40%" alt="Beykoz Üniversitesi Yazılım Kulübü">
+                        </a>
+                    </div>
                     
                 </div>
             </div>
