program page release

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h1 class="hero-title" style="font-size: 40 px;font-weight: 600; line-height: 48px; text-align: left;">Boğaziçi DataCamp'22</h1>
                     <div class="header-detail-text">
                         <div style="font-size: 16 px;font-weight: 400; line-height: 24px; text-align: left;">
-                        <p>Boğaziçi Üniversitesi Bilişim Kulübü Compec tarafından düzenlenen ve bu sene dördüncü kez gerçekleşecek olan Boğaziçi DataCamp’e davetlisiniz!</p>
+                        <p>Boğaziçi Üniversitesi Bilişim Kulübü Compec tarafından düzenlenen ve bu sene beşinci kez gerçekleşecek olan Boğaziçi DataCamp’e davetlisiniz!</p>
                         <p>Workshopların, zirvenin ve webinarların olduğu etkinlikte Veri Bilimi ve Yapay Zeka’nın çeşitli alanlardaki güncel uygulamalarını tanırken aynı zamanda teknik anlamda da kendinizi geliştirebileceksiniz.
                         </p>
                         <div class="btn btn-primary" style="padding-top: 18px; margin-top:18px;padding-right: 0px; padding-bottom: 18px; padding-left: 0px; font-size: 24px; font-weight: 500; line-height: 29px; letter-spacing: 0px; text-align: left; border:none;">
