navbardan program sayfası açıldı

--- a/program/index.html
+++ b/program/index.html
@@ -98,7 +98,7 @@
         <nav id="nav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
           <a href="https://biletino.com/tr/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
-          <!--<a href="../program" data-type="navItem" class="animated fast fadeOut">Program</a> -->
+          <a href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
           <a href="../sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
           <a href="../sss" data-type="navItem" class="animated fast fadeOut active">SSS</a>
           <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
