--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -135,6 +135,16 @@
                         <img src="../assets/partners/2022/zirve/Turkiye_Is_Bankasi.png" width="80%" alt="İş Bankası">
                         </a>
                     </div> 
+                    <div class="sponsorimgcontainer">
+                        <a href="https://tazi.ai">
+                        <img src="../assets/partners/2022/zirve/taziai.png" width="80%" alt="TAZI AI">
+                        </a>
+                    </div> 
+                    <div class="sponsorimgcontainer">
+                        <a href="https://solvoyo.com">
+                        <img src="../assets/partners/2022/zirve/solvoyo.png" width="70%" alt="Solvoyo">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="sponsorscolumns"  style="display:none">
@@ -148,7 +158,7 @@
                     <
                 </div>
             </div>
-            <div class="sponsorscolumns">
+            <div class="sponsorscolumns" >
                 <div class="sponsorcoltitle">
                     Okul Kulüpleri
                 </div>
@@ -169,7 +179,7 @@
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
-                        <a href="https://www.instagram.com/technouskudar/">
+                        <a href="https://www.instagram.com/techno_vasyon/">
                         <img src="../assets/partners/2022/kulupler/uskudar-tk.jpeg" width="40%" alt="Üsküdar Üniversitesi Teknoloji Kulübü">
                         </a>
                     </div>
@@ -181,6 +191,21 @@
                     <div class="sponsorimgcontainer">
                         <a href="https://linktr.ee/beykozuniyazilim">
                         <img src="../assets/partners/2022/kulupler/beykozyazilim.png" width="40%" alt="Beykoz Üniversitesi Yazılım Kulübü">
+                        </a>
+                    </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://linktr.ee/beykentbmk">
+                        <img src="../assets/partners/2022/kulupler/beykentbmk.jpg" width="40%" alt="Beykent Üniversitesi Bilgisayar Mühendisliği Kulübü">
+                        </a>
+                    </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.instagram.com/ituaiclub/">
+                        <img src="../assets/partners/2022/kulupler/ituaiclub.jpg" width="40%" alt="İTÜ Yapay Zeka Kulübü">
+                        </a>
+                    </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://biolinky.co/buyabi">
+                        <img src="../assets/partners/2022/kulupler/buyabi.jpg" width="40%" alt="Bahçeşehir Üniversitesi Yazılım ve Bilişim Kulübü">
                         </a>
                     </div>
                     
