--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -130,11 +130,7 @@
                         <img src="../assets/partners/2022/workshop/goodjob_games.png" width="80%" alt="Good Job Games">
                         </a>
                     </div> 
-                    <div class="sponsorimgcontainer">
-                        <a href="https://www.isbank.com.tr">
-                        <img src="../assets/partners/2022/zirve/Turkiye_Is_Bankasi.png" width="80%" alt="İş Bankası">
-                        </a>
-                    </div> 
+                    
                     <div class="sponsorimgcontainer">
                         <a href="https://tazi.ai">
                         <img src="../assets/partners/2022/zirve/taziai.png" width="80%" alt="TAZI AI">
@@ -142,9 +138,19 @@
                     </div> 
                     <div class="sponsorimgcontainer">
                         <a href="https://solvoyo.com">
-                        <img src="../assets/partners/2022/zirve/solvoyo.png" width="70%" alt="Solvoyo">
+                        <img src="../assets/partners/2022/zirve/solvoyo.png" width="50%" alt="Solvoyo">
                         </a>
                     </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.d-teknoloji.com.tr">
+                        <img src="../assets/partners/2022/workshop/dogus_teknoloji.png" width="70%" alt="Doğuş Teknoloji">
+                        </a>
+                    </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.isbank.com.tr">
+                        <img src="../assets/partners/2022/zirve/Turkiye_Is_Bankasi.png" width="80%" alt="İş Bankası">
+                        </a>
+                    </div> 
                 </div>
             </div>
             <div class="sponsorscolumns"  style="display:none">
@@ -238,6 +244,11 @@
                         <img src="../assets/partners/2022/destekçilerimiz/deep_and_reinforcement_learning.jpg" width="36%" alt="ig:deep_and_reinforcementlearning">
                         </a>
                     </div>  
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.instagram.com/askidanevar/">
+                        <img src="../assets/partners/2022/destekçilerimiz/askida-ne-var-logo.png" width="36%" alt="ig:askidanevar">
+                        </a>
+                    </div> 
                     
                 </div>
             </div>
