Summary is not required

--- a/program/index.html
+++ b/program/index.html
@@ -219,7 +219,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
+                    <h3 class="event-card-heading">Hands-on Machine Learning Application </h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -245,12 +245,12 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/2022/partner/global_ai_hub_kare.jpg" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/omer_cengiz.jpg" alt="Ömer Cengiz">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">TBA</p>
+                        <p class="event-card-name">Ömer Cengiz</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
+                          <p class="event-card-position">AI Team Leader</p>
                           <p class="event-card-company">Global AI Hub</p>
                         </div>
                       </div>
@@ -527,7 +527,7 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/erkan_eymur.jpeg" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/erkan_eymur.jpeg" alt="Erkan Eymür">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name">Erkan Eymür</p>
@@ -788,7 +788,7 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="Mola">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name"></p>
@@ -1531,7 +1531,7 @@
                         <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">TBA</p>
+                        <p class="event-card-name"></p>
                         <div class="event-card-title">
                           <p class="event-card-position"></p>
                           <p class="event-card-company"></p>
@@ -1573,7 +1573,7 @@
                         <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">TBA</p>
+                        <p class="event-card-name"></p>
                         <div class="event-card-title">
                           <p class="event-card-position"></p>
                           <p class="event-card-company"></p>
@@ -1709,7 +1709,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
+                    <h3 class="event-card-heading">Yapay Zeka Uygulamalarının Geleceğine AutoML Üzerinden Bakış</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -1735,17 +1735,28 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/2022/workshop/taziai.png" alt="Taz.ai">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/erdi_gungor.jpg" alt="Erdi Güngör">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">TBA</p>
+                        <p class="event-card-name">Erdi Güngör</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
+                          <p class="event-card-position">Senior Data Scientist</p>
                           <p class="event-card-company">TAZI AI Systems</p>
                         </div>
                       </div>
                     </div>
-                    
+                    <div class="event-card-profile-card">
+                      <div class="event-card-profile">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/goknil_ozer.jpg" alt="Göknil Özer">
+                      </div>
+                      <div class="event-card-about">
+                        <p class="event-card-name">Göknil Özer</p>
+                        <div class="event-card-title">
+                          <p class="event-card-position">Community Builder <br> R&D Manager</p>
+                          <p class="event-card-company">TAZI AI Systems</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="event-card" style="visibility:hidden">
