--- a/program/index.html
+++ b/program/index.html
@@ -414,7 +414,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
+                    <h3 class="event-card-heading">Türkiye'de Yapay Zeka Ekosistemi</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -440,13 +440,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/betul_kubra_ekinci.jpg" alt="Betül Kübra Ekinci">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">TBA</p>
+                        <p class="event-card-name">Betül Kübra Ekinci</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">Ecosystem Orchestrator</p>
+                          <p class="event-card-company">TRAI - Türkiye Yapay Zeka İnisiyatifi</p>
                         </div>
                       </div>
                     </div>
@@ -857,7 +857,7 @@
             
               </div>
 
-              <div class="day-card-row">
+              <div class="day-card-row" style="display:none">
                 <div class="event-card">
                   <div class="event-card-top">
                     <h3 class="event-card-heading">Türkiye'de Yapay Zeka Ekosistemi</h3>
