--- a/program/index.html
+++ b/program/index.html
@@ -164,8 +164,8 @@
                       <div class="event-card-about">
                         <p class="event-card-name">Deniz Aksoy</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Senior Art Director</p>
-                          <p class="event-card-company">Turkcell</p>
+                          <p class="event-card-position">Eğitmen</p>
+                          <p class="event-card-company">Deniz Aksoy Eğitim Tasarım Danışmanlık</p>
                         </div>
                       </div>
                     </div>
@@ -716,7 +716,7 @@
                 </div>
                 <div class="event-card">
                     <div class="event-card-top">
-                      <h3 class="event-card-heading">TBA</h3>
+                      <h3 class="event-card-heading">Veri Görselleştirme ve Algı Yönetimi</h3>
                       <p class="event-card-desc"></p>
                       <div class="event-card-details">
                         <div class="event-card-details-element">
@@ -747,8 +747,8 @@
                         <div class="event-card-about">
                           <p class="event-card-name">Deniz Aksoy</p>
                           <div class="event-card-title">
-                            <p class="event-card-position">Senior Art Director</p>
-                            <p class="event-card-company">Turkcell</p>
+                            <p class="event-card-position">Eğitmen</p>
+                            <p class="event-card-company">Deniz Aksoy Eğitim Tasarım Danışmanlık</p>
                           </div>
                         </div>
                       </div>
