--- a/program/index.html
+++ b/program/index.html
@@ -1500,7 +1500,7 @@
 
               </div>
 
-              <div class="day-card-row">
+              <div class="day-card-row" style="display:none">
                 <div class="event-card">
                   <div class="event-card-top">
                     <h3 class="event-card-heading">Kapanış Konuşması</h3>
