resim deneme commit

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         
                 <!-- <a href="#about" data-scroll data-type="navItem" class="animated fast fadeOut active">Bilgi</a> -->
-        
+
+
                 <a style="display:none;"href="https://biletino.com/en/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
 
                 <a style="display:none;"href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
@@ -317,30 +318,30 @@
                     <div class="text">
                         <strong>Asaf Kanlıpıçak</strong> <br>
                         <em>DataCamp Proje Direktörü</em> <br>
-                        <a class="mailFont" href="mailto:celal.gundogdu@compec.org" target="_top">asaf.kanlipicak@compec.org</a> <br>
-                   <!-- Ekip iletişim bilgileri    <a href="tel:+905364433684" target="_top">+90 536 443 36 84</a>-->  
+                        <a class="mailFont" href="mailto:asaf.kanlipicak@compec.org" target="_top">asaf.kanlipicak@compec.org</a> <br>
+
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/dogi.jpg" alt="Doğukan Çayağzı">
+                        <img src="assets/team/dogukan.jpg" alt="Doğukan Çayağzı">
                     </div>
                     <div class="text">
                         <strong>Doğukan Çayağzı</strong> <br>
                         <em>DataCamp Proje Lideri</em> <br>
                         <a class="mailFont" href="mailto:dogukan.cayagzi@leader.compec.org" target="_top">dogukan.cayagzi@leader.compec.org</a> <br>
-                     <!--    <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>-->  
+
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/eda.jpg" alt="Edanur Bozkurt">
+                        <img src="assets/team/edanur.jpg" alt="Edanur Bozkurt">
                     </div>
                     <div class="text">
                         <strong>Edanur Bozkurt</strong> <br>
                         <em>DataCamp Proje Lideri</em> <br>
                         <a class="mailFont" href="mailto:edanur.bozkurt@leader.compec.org" target="_top">edanur.bozkurt@leader.compec.org</a> <br>
-                    <!--     <a href="tel:+905316560971" target="_top">+90 531 656 09 71</a>-->  
+
                     </div>
                 </div>
                 <div class="team-member">
