--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/mert.jpg" alt="Mert Gökyar">
+                        <img src="assets/team/mertgokyar.jpeg" alt="Mert Gökyar">
                     </div>
                     <div class="text">
                         <strong>Mert Gökyar</strong> <br>
