--- a/index.html
+++ b/index.html
@@ -255,48 +255,31 @@
         <div class="container"> <!--KOPYALAMANIN BAŞI, BURADAN SONRASI GİDECEK. Discord'a toplantıda attığım link ile yapılacak. Bundan farklı görünürse, sıkıntı olursa yazın.-->
             <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
             <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
-                data-link="https://photos.app.goo.gl/2cgwv5BPUncTXkYt7" data-title="Datacamp"
+                data-link="https://photos.app.goo.gl/sfRShTKr6D9vp91S7" data-title="Datacamp"
                 data-description="20 new photos added to shared album">
                 <object
-                    data="https://lh3.googleusercontent.com/2on3uC4G23SZ-W1vaZl4-QFUOIUnWFl2FXXP3JilcQ9Ybf2HAtvq63nu6fUemVjDJFrXLFG8WbgE8lT76bwrBK-3hYowuRtxcYT556YE9Qw5OW8lUvYTW8TTq_gkAm7KWcKrbB8Uwg=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc-JmtT-Z1eQEb-iqs7wNEmlg-dgujOmjlG_RIvhxjqE8Z0H52qdT5XmIw8DJ7gSZ-ZFo0vD0epBrl324SMHv3COePbB0OwF44M_6BAJqTaN4Rx_XFNOKx6ZknTY4p2zeEDU_UMnfS6YRUakhymGYEqc=w2206-h1470-s-no?authuser=0"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/B5m6RkpRUVQqetGSmk-wsxQToyiBrvKf2L8sQGuatu_O__ej7nNYLLUSnlQbxUOtXRbtLu8y2ZbJFK3kV0dvYyFtpySyiIVgEc1bMLW4iMAqpp_1_fDN7zblviBfAV1ZzHZb-Mrwig=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc_pazbeh0gH61gRJqcRAjFHw_UROi6Qcaz-SZ3pFm_4Cyr3NdyBSrZUsXj6msQqzXKyPK588m4IfA4QtH4UBbxVPrUlUv5wM0fSn1Km9wb6pR5x81YVQBxo6dfYocmBAtrwsRbEKtExO6JihppqaiG4=w2206-h1470-s-no?authuser=0"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/bsiI_HjXJCZ8SBvKvJ0rhvWux0sEE7LgJIz6WTpuXKefb5pKLxL2cL9IgoPcpFj_YwQzqXMHRp9kMcU5AZuOY6En4GE4ZaZidU6hO1TEeJ4-FiUaWknx2HxTKmiUICC-Er9jYusPdw=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc8uvQYLkzbDMcWgpA0SYxju08MiIT71DdktPGNJ2phyXVzQNav5zRDzLwqQloQyoPki0m4A06lHhs7CacRt9Dh9JeWX3lNYctwLHAXurFmebQouXqXXY-eVOzakyyE4uQrUnCn-m-JGW9p7GjS_X5_u=w2206-h1470-s-no?authuser=0"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/xTJ1Q8J4fvCD0nJYdR9_my-q0zAq6yiw9PAeeYPn9WnBRrlKeuUf9bL0i227La2SaC9reBzZqTJPhYOh1vAvMDZSQzRvxmMBWX5V6DRGrWuWIRyGtNabJH5Sc6Wa_47LEsbZRi1qkw=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc_8UqNTtRETvk0IOaDDsSt565owxawA76KzvC9vhbLWFDg-WXYJgkCcOWD9Lo3Zb59oYyfJgIUv-RC5JCx1LTNNJKm7e9vD9CIsRqJRj22ZEyfVP6a4LQRhawMfCq2Zs4XqJDhJ9Y_blT7-mM3EYhv9=w2206-h1470-s-no?authuser=0"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/H7i6zI9Xm5IVSs6aPhNT9cYMd6MuEsQ3qsR6nHArL6WVV3HLwwV7mRKEFlldfazz_DWcp1Jd-hIpN7ErfbB-ZJfgswFJWo3JCDNY-aU3oFhv7NYfvZdBsZ1rbqN1CFxYYZR95OrJ3w=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc_-ksuqmAdLL2VNKXVf4Iax4sEIGWoP-l8tyNf7-_7_wPMTHoBsuCm8lOZ9rDvBO73gQeo0klsIfj1FQhsdEfBRDzOJ4gevUEBNKMkMEqOGW92PBEPQ_1vcxdP2sA1TQJLSxUG-4zAbqu2EyzWUaYRy=w2206-h1470-s-no?authuser=0"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/V5Ioa_wOhbaJ3wU9kcKxR5rYbCHrJpQOxm2awE_jVeOqCSuA1exTeS3xyZP5dxIEvXoymI59K550XH_Oz7UvPMbcsTwuTT5P6x-UaPWTMD91jmwCMX7tXYi7HEy_mamJYf0FQucbQg=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc_xmIBQZmP1E55kWUc-5rDfaUC_WLtA0jykr6LScd4a3SRJv6TDBEUVAN9_oz5BRO9FzAbbBnDOThTov-k8Ox3vq0ibKGlrodAB-6fv2r0UAkDkxsYqUQHIjRHem4Bv4rM3w0Acb5bmsA5rz6KcYqNo=w2206-h1470-s-no?authuser=0"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/hvPMIfeP5UjsX3JC5GZywM1ML6g3FgOd__-cB3BDrepT9oIKkrxiKHKs6d4V_a_OAH_VUpm22L42uIyQiY2PRl2s05XK7nOodn7y34WWCdL2AEWr-G6meuaSib2kYLvsPrgDXu9JZQ=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc9G2KjngigNaosu-eRsnCAGIHJpc8nBcJr9l3GnItjrm7aeizaQtm78w2RvcF8QHkLv94u-sCJoA3Y8yGNRnkpBui98acLYQITSVnVu4eFDEsFRJWg9eczyfkLH4yPGhPLvuVaLi-yvIjInMFNickmu=w980-h1470-s-no?authuser=0"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/ri04i9skyO9FNRezOW-dsME_siZkOCQpw1fpplvT_L6n9c4BIowYsrL-gRZcE1j_Wea2vh7cbrduZ5qqdKw-gO2bvTfsFnkPZ7VrRgWrKVuzfDn0aOgSkf125iewouivajd2tFOsAA=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/OnIYN76J0jnpdad11j_9LjIeV56Mb0-sNJyFFZ4-n8sDwil90RhildczBoD1jvMTlHXxUW_9tVSCxkNB4GREEk-GhtUFSZjyWbj4UO8IDoChcy0u_Ue8Ydn03KTXbwYPnXElI6MvSw=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/EVmR2Mr1XNYJVm5T76xYt55zmhQLP5rHB0khnhX9yLeSDYQrDCLuLzZklaFhIHFzc_b8cJ1o5uxSQhemvP60QjTbetSFKJildU77H84VUp9-p-xRzzkmHplJ3acyf5w-9Hgcf7wYLQ=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc8A32czwxbNgFQO1C5KfGEQ9JXnG8jj_l7I9elAmOEzwp-UoC59v7vLQGujgJiK7qm8KDqrZdoZhup6ZcRFUkclkHH6BCg_c0L5aaf680C9E1CyOWZB1fxpTB66Sb7_hS3QpuI0SIGCyyKqNJur5RRb=w2206-h1470-s-no?authuser=0"></object>
                 <object
                     data="https://lh3.googleusercontent.com/dpmJ-6LHOFAmO--yfknSzdHBS2GJLJmD8P1H7rRzxoeoUGQExbsXfYdwAcyMQM-1NztWhjJvA_zxalWqQVsKnTX7h8O2e8CxAQ2iVMoNEtCYL6Rs-VkWMjZGhrcOqa7uYTPu6ne7Fg=w1920-h1080"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/WrZnqaEO-MLu20ctW5FsOnonQBYwRudUXaQn9TZbsEY42pelVxm9Ixph8FqRyYAK8LX0GenAPoy8d1ib3GcNC6j1r3r4rfCbEnk_JdEwhAhhz8uSz4n5xRwoeS_2nwI0-ntsPEao4Q=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/EVmR2Mr1XNYJVm5T76xYt55zmhQLP5rHB0khnhX9yLeSDYQrDCLuLzZklaFhIHFzc_b8cJ1o5uxSQhemvP60QjTbetSFKJildU77H84VUp9-p-xRzzkmHplJ3acyf5w-9Hgcf7wYLQ=w1920-h1080"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/W7em66Tev0sSMJGaqTQYd-IN1LVMRrZ5vmTvyUQHx4JzWCO2hC20JMmGXRqrlCoG8c_8jAxazL7H0bGdqsjgkYvuFa1YOyFgeTLYollXmAv5NZFFt46-Ga7fDv1y1ojLfWqD_VS97w=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/asxae3_U7Njw2sk-ThbXbs24SCw9jn8du1bxuqWuMjeuT4wkbQd33U3ypTIHwu3nxsT2nHynOwja4xUneT939C6xKLssOQ5LZRqihXBNCJKYi6HME-9muUmhq9ZgdLP7RC5IR-jTmw=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/skipFUrLizu3usX3tJ7LNgXGGvQtK58o8yAFrkxmPPfN1wq7CJf2-cA2EDHJd35w8Gb3Zaeenc5DJC572qxd1bBkn4sV9FkYKQdv5eun28SkaIRtnCnr-hMeBg-LWMPn_i6VFiGi5g=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/dvww3PPKNNNgNyySSXk4prmlVcgP01SVNfhYoXxqoPBpKrsvB2b8xmKHncOErWX9UMNBrlechxGi4Xh627tGSIajTiGyviCMdeCEw_PI3LEaL1TOE8k60djoMrkmQ3TJ8pKys7YuUQ=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/lMCrqF8NUVj34vcap-y-g9AOo9wEBgsNL7UbK-5hL2bOXO-gkjCOIYL9Zh2Ek69k-eLx5LCPbsyINSd4_4ztlIWsB_p5xQbHJXli6XLabz1nvGliO2_EmTH21O-IGpWklSiFsjDuBw=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/ysfpNANS3BZTlll8JmwoCqjOYpt_aVnB2IbXO4P6_VLeu83A0JV0-iOwRx36FFD4diSWZ-YfeO4CiOWat8bPGskPRaWIHxpydHIHQjpQt75HbT6o-M2hrCwjsYcfOGo7Zsozm_kdHA=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/AhhQdXOgWprTsMeQ6PlDvHhD4yNUvNe9rHSmcBdVyBcAw5Jj6w2CA97n2s1RBGmgGyr2P5zbg-CLHWINbLdqSAd3gG0dFlIs8kdPQL7kUHtArLENsDqCGpJctIUqAor7voJS2D2QYg=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/8b5wfgc2I-D9ezLrIjsrRQKRG-uaYz7v_H1awm-XzVewaVH2KCW_vyBuIBL4UOH8Rk7lRPflnEzAa5YfK1Cc9qWNgV6eJZ0LpoBPKaC8f3AKlB-_o1MKQXVgB3cSdTVIUQEn5ShDYg=w1920-h1080"></object>
+                    data="https://lh3.googleusercontent.com/pw/AIL4fc8niyF05ip5YRlXhB7CrrDRDXmh5HiLpyyWPsoBaD0Od0SLiAjQzjPzP8lylZ33dxgqWYK6ur3WEdfNc5ghlZv3IEtl3HuJz7GLsDLhxyD4zh9o12t0wY2HcP4b4ODiqpoNFwbm4ROOGpZXlJrLxzt9=w2206-h1470-s-no?authuser=0"></object>
+
             </div>
 
             <!--BURAYA KADAR, ARASININ YERİNE KOY-->
