site kayit linkleri

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <!-- <a href="#about" data-scroll data-type="navItem" class="animated fast fadeOut active">Bilgi</a> -->
 
 
-                <a style="display:none;"href="https://biletino.com/en/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
+                <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
 
                 <a style="display:none;"href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
         
@@ -129,8 +129,8 @@
                         <p>Workshopların, zirvenin ve webinarların olduğu etkinlikte Veri Bilimi ve Yapay Zeka’nın çeşitli alanlardaki güncel uygulamalarını tanırken aynı zamanda teknik anlamda da kendinizi geliştirebileceksiniz.
                         </p>
                         <div class="btn btn-primary" style="padding-top: 18px; margin-top:18px;padding-right: 0px; padding-bottom: 18px; padding-left: 0px; font-size: 24px; font-weight: 500; line-height: 29px; letter-spacing: 0px; text-align: left; border:none;">
-                            <a style="display:none;padding-top: 22.5px;padding-right: 72px; padding-bottom: 22.5px; padding-left: 72px;color: white;font-size: 2.4vh; font-family: inherit;
-" href="https://biletino.com/en/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" target="_blank">Kayıt Ol!</a>
+                            <a style="padding-top: 22.5px;padding-right: 72px; padding-bottom: 22.5px; padding-left: 72px;color: white;font-size: 2.4vh; font-family: inherit;
+" href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" target="_blank">Kayıt Ol!</a>
                         </div>
                         </div>
                         <!--<div style="transform: translateY(10px); text-align: left; font-size: 16 px;font-weight: 400; line-height: 19.2px;"> -->
