--- a/sss/index.html
+++ b/sss/index.html
@@ -86,7 +86,7 @@
 
                     <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
 
-                    <a href="https://biletino.com/tr/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
+                    <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
 
                     <a style="display:none;" href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
 
@@ -134,8 +134,8 @@
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <a>Yakında duyurulacak.</a>
-                          <!--Boğaziçi DataCamp’e <a href="https://biletino.com/tr/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" target="_blank">Biletino</a> vasıtasıyla kayıt olabilirsiniz.-->
+                          
+                          Boğaziçi DataCamp’e <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" target="_blank">Biletimgo</a> vasıtasıyla kayıt olabilirsiniz.
                         </div>
                       </div>
                     </div>
@@ -147,7 +147,7 @@
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          Bilet ücretine Zirve’ye katılma hakkı, Workshoplara katılma hakkı ve promosyonlara erişim hakkı dahil olmak üzere Boğaziçi DataCamp’in tüm içerikleri dahildir. Sadece 12 ve 13 Kasım günlerindeki zirveye fiziksel olarak katılmak için yüz yüze bilet almanız gerekmektedir.
+                          Bilet ücretine Zirve’ye katılma hakkı, Workshoplara katılma hakkı ve promosyonlara erişim hakkı dahil olmak üzere Boğaziçi DataCamp’in tüm içerikleri dahildir. Sadece 5 Kasım günündeki zirveye fiziksel olarak katılmak için yüz yüze bilet almanız gerekmektedir.
                         </div>
                       </div>
                     </div>
@@ -178,7 +178,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
+                    <!--
+                      <div class="accordion-item">
                       <h2 class="accordion-header" id="headingSix">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
                           Online katılımcılar networking imkanı bulabilecekler mi?
@@ -189,8 +190,10 @@
                           Online katılımcılar, Boğaziçi DataCamp’te geçen senelerde de olduğu gibi Discord platformu üzerinden networking yapabileceklerdir.
                         </div>
                       </div>
-                    </div>
-                    <div class="accordion-item">
+                    </div> 
+                      -->
+                    <!--
+                      <div class="accordion-item">
                       <h2 class="accordion-header" id="headingSeven">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
                          5 Kasım'dan sonra düzenlenecek olan webinarlara nasıl katılabilirim?
@@ -202,6 +205,7 @@
                         </div>
                       </div>
                     </div>
+                    -->
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingEight">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
